# koe

./: .bootstraprc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile-basic  Dockerfile-tensorflow  LICENCE.md  LICENSE  Makefile  README.md  actions.json  app.json  babel.config.js  blah.csv  build.js  circle.yml  deploy-hot.sh  deploy.sh  docker-compose.yml  install-redis.sh  jupyter_notebook_config.py  koe.env  linearly_separable_data.csv  lint.js  maintenance.py  manage.py  matplotlibrc  migrate.sh  package-docker.sh  package-lock.json  package.json  (+24 more)
cms/: models.py
docs/: 404.html  DEPLOY.md  INSTALL-conda.md  INSTALL-linux.md  INSTALL-mac.md  INSTALL-windows.md  INSTALL.md  RUN.md  UPGRADE.md  index.html  index.json  index.xml  sitemap.xml
koe/: __init__.py  admin.py  aggregator.py  apps.py  binstorage.py  binstorage2.py  binstorage3.py  celery.py  celery_init.py  celery_settings.py  cluster_analysis_utils.py  colourmap.py  feature_utils.py  forms.py  graph_utils.py  grid_getters.py  jsons.py  linear_svm.py  ml_utils.py  model_utils.py  models.py  neuralnet_models.py  plot_segmentation_results.py  rbf_svm.py  rnn_models.py  rnn_train.py  sequence_utils.py  settings.py  signals.py  sigproc_utils.py  spect_utils.py  storage_utils.py  task.py  tasks.py  ts_utils.py  urls.py  utils.py  views.py  wavfile.py  wsgi.py
notebooks/: 1_hello_tensorflow.ipynb  3_mnist_from_scratch.ipynb  Force directed graph.ipynb  Visualise accuracies by num instances.ipynb  calc_syntactic_similarity.ipynb  cluster_variances.ipynb  clusviz.ipynb  display_class_adjacency.ipynb  display_dimreduced_data.ipynb  display_tsne_from_tensordata.ipynb  incremental_networkx.ipynb  plot_graph_measures_as_class_merging.ipynb  symprof.ipynb  test_random_network.ipynb  try_simprof.ipynb  trysklearn.ipynb  visualise_hyperopt_nnet.ipynb  (+1 more)
root/: admin.py  (+9 more)
(+577 files in other folders)
